Update configuration files to use environment variables instead of hardcoded values

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,10 @@ REACT_APP_DESCRIPTION=Anonymous Board Application
 
 # Environment
 NODE_ENV=production
+PORT=4000
+
+# SQLite Configuration (optional)
+SQLITE_DB_PATH=database.sqlite
+
+# Google OAuth Callback URL (optional)
+GOOGLE_CALLBACK_URL=http://localhost:4000/api/auth/google/callback
