--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,6 +35,12 @@ services:
       - bonymous-network
     restart: unless-stopped
     command: npm run dev  # Development command with hot reload
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4000/api/health", "||", "exit", "1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   mongodb:
     image: mongo:6.0
@@ -51,6 +57,12 @@ services:
     networks:
       - bonymous-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   postgresql:
     image: postgres:15
@@ -67,6 +79,12 @@ services:
     networks:
       - bonymous-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d bonymous_dev"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   # Frontend development server (optional)
   frontend:
